Allow test workers to run as modules